add listeners to left and right sections