@@ -8,13 +8,12 @@ import com.badlogic.gdx.scenes.scene2d.ui.VerticalGroup;
 import com.badlogic.gdx.scenes.scene2d.utils.ChangeListener;
 import com.badlogic.gdx.utils.Align;
 import stonering.entity.item.Item;
+import stonering.entity.item.ItemGroupingKey;
 import stonering.enums.items.recipe.Ingredient;
 import stonering.game.model.system.item.ItemsStream;
 import stonering.util.geometry.Position;
 
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.List;
+import java.util.*;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
 
@@ -27,10 +26,12 @@ import java.util.stream.Collectors;
  * @author Alexander on 17.02.2020
  */
 public class ItemsSelectGrid extends ActorGrid<StackedItemSquareButton> {
+    private Map<ItemGroupingKey, StackedItemSquareButton> buttonMap;
     public Consumer<StackedItemSquareButton> commonHandler; // handles all buttons
     
     public ItemsSelectGrid(int cellWidth, int cellHeight) {
         super(cellWidth, cellHeight);
+        buttonMap = new HashMap<>();
         commonHandler = button -> {};
         defaults().pad(5).size(40, 40);
         // set table background
@@ -52,12 +53,24 @@ public class ItemsSelectGrid extends ActorGrid<StackedItemSquareButton> {
     public void fillForIngredient(Ingredient ingredient, Position position) {
         fillItems(new ItemsStream()
                 .filterByReachability(position)
-                .filterHasTag(ingredient.tag)
-                .filterByTypes(ingredient.itemTypes).toList());
+                .stream.filter(ingredient::checkItem).collect(Collectors.toList()));
     }
     
+    public void setAllButtonsDisabled(boolean disabled) {
+        for (Cell<StackedItemSquareButton>[] row : gridCells) {
+            for (Cell<StackedItemSquareButton> cell : row) {
+                if(cell != null) cell.getActor().setDisabled(disabled);
+            }
+        }
+    }
+
+    /**
+     * Adds list of items to widget. Always creates new button.
+     * All items should have save type and material.
+     */
     private void addItemButton(List<Item> items) {
         StackedItemSquareButton button = new StackedItemSquareButton(items);
+        buttonMap.put(new ItemGroupingKey(items), button);
         addActorToGrid(button);
         button.addListener(new ChangeListener() {
             @Override
@@ -65,5 +78,21 @@ public class ItemsSelectGrid extends ActorGrid<StackedItemSquareButton> {
                 commonHandler.accept(button);
             }
         });
+    }
+
+    /**
+     * Adds another item to widget. Creates new button or updates existing one.
+     */
+    public void addItem(Item item) {
+        ItemGroupingKey key = new ItemGroupingKey(item);
+        StackedItemSquareButton button = buttonMap.get(key);
+        if(button == null) {
+            button = new StackedItemSquareButton(item);
+            buttonMap.put(key, button);
+            addActorToGrid(button);
+        } else {
+            button.items.add(item);
+            button.updateLabel();
+        }
     }
 }
